--- a/src/pages/projects/index.scss
+++ b/src/pages/projects/index.scss
@@ -1,7 +1,7 @@
 $image-size: 500px;
 
 .project__container {
-  padding: 30vh 0;
+  padding-top: 10vh;
   background-color: $background;
   display: grid;
   grid-template-rows: auto auto auto;
@@ -9,18 +9,42 @@ $image-size: 500px;
   align-items: center;
   justify-content: baseline;
 }
-
-.test {
+.right{
+  margin-top: 10px;
+  margin-right: 50px;
+}
+.project__item {
   display: grid;
   grid-template-columns: $image-size auto;
   column-gap: 20px;
-  margin: 0 2vw;
   overflow: hidden;
+
+  &__even {
+    display: grid;
+    grid-template-columns: $image-size auto;
+    column-gap: 20px;
+    overflow: hidden;
+    background-color: #39506b;
+  }
 }
 .project__header {
   font-weight: 700;
   font-size: 1.5rem;
 }
 .project__image {
+  padding: 20px;
+  left: 30px;
   width: $image-size;
+}
+
+.view__btn{
+  text-decoration: none;
+  padding: 10px;
+  border: 2px $text-color solid;
+  border-radius: 5px;
+  transition: $transition-time;
+  &:hover{
+    color: $link-active;
+    border-color: $link-active;
+  }
 }
