--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -1,5 +1,3 @@
-$link_active: #efc438;
-$drop_active: #df6970;
 $triangle_size: 3px;
 $triangle_thickness: 2px;
 $transition_time: 0.4s ease;
@@ -9,6 +7,7 @@ $transition_time: 0.4s ease;
   height: $navbar-height;
   padding: 20px;
   position: fixed;
+  filter: drop-shadow(0 40px 50px #00000060);
 }
 .nav__header {
   display: inline;
@@ -17,6 +16,7 @@ $transition_time: 0.4s ease;
   }
 
   &:hover a {
+    cursor: pointer;
     color: $link_active;
     transition: $transition_time;
   }
@@ -29,6 +29,7 @@ $transition_time: 0.4s ease;
 
   a {
     &:hover {
+      cursor: pointer;
       color: $link_active;
       transition: $transition_time;
     }
@@ -45,6 +46,9 @@ $transition_time: 0.4s ease;
 }
 .dropdown {
   &__active {
+    &:hover {
+      cursor: pointer;
+    }
     color: $link_active;
   }
   &__decoration {
@@ -53,8 +57,8 @@ $transition_time: 0.4s ease;
     display: inline-block;
     padding: $triangle_size;
     margin-left: 10px;
-    transform: rotate(225deg);
-    -webkit-transform: rotate(225deg);
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
     transition: $transition_time;
 
     &__active {
@@ -63,8 +67,8 @@ $transition_time: 0.4s ease;
       display: inline-block;
       padding: $triangle_size;
       margin-left: 10px;
-      transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
+      transform: rotate(225deg);
+      -webkit-transform: rotate(225deg);
       transition: $transition_time;
     }
   }
@@ -87,6 +91,7 @@ $transition_time: 0.4s ease;
       color: $link_active;
       transition: $transition_time;
       &:hover {
+        cursor: pointer;
         transition: $transition_time;
         color: $drop_active;
       }
