--- a/src/pages/projects/index.scss
+++ b/src/pages/projects/index.scss
@@ -9,7 +9,7 @@ $image-size: 500px;
   align-items: center;
   justify-content: baseline;
 }
-.right{
+.right {
   margin-top: 10px;
   margin-right: 50px;
 }
@@ -27,27 +27,70 @@ $image-size: 500px;
     background-color: #39506b;
   }
 }
-.project__header {
-  font-weight: 700;
-  font-size: 1.5rem;
-}
+
 .project__image {
   padding: 20px;
   left: 30px;
   width: $image-size;
 }
-.project__description
-{
+.project__header {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+.project__description {
   padding-top: 3px;
 }
-.view__btn{
+.view__btn {
   text-decoration: none;
   padding: 10px;
   border: 2px $text-color solid;
   border-radius: 5px;
   transition: $transition-time;
-  &:hover{
+  &:hover {
     color: $link-active;
     border-color: $link-active;
+  }
+}
+
+@media (max-width: 900px) {
+  .project__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+    overflow: hidden;
+    padding-bottom: 40px;
+    &__even {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-self: center;
+      overflow: hidden;
+      background-color: #39506b;
+      padding-bottom: 40px;
+    }
+  }
+  .project__image {
+    padding: 20px;
+    left: 30px;
+    width: $image-size * 1.4;
+    object-fit: cover;
+  }
+  .project__header {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-left: 6vw;
+  }
+  .project__description {
+    padding-top: 3px;
+    margin-left: 6vw;
+  }
+  .view__btn {
+    margin-left: 6vw;
+  }
+}
+@media (max-width: 500px) {
+  .project__image {
+    width: $image-size / 1.2;
   }
 }
