--- a/src/styles/mobileStyles.scss
+++ b/src/styles/mobileStyles.scss
@@ -130,8 +130,9 @@
     font-size: 2rem;
   }
 
-  .hero__blurb {
-    font-size: 1rem;
+  .Typewriter__wrapper, .Typewriter__cursor {
+    margin-top: 0;
+    font-size: 0.7rem;
   }
 
   //About
