--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@ $navbar-height: 75px;
   color:$text-color;
 }
 section {
-  background-color: #243448;
+  background-color: $background;
 }
 
 .back_to_top{
@@ -29,7 +29,7 @@ section {
 }
 
 .footer{
-  background-color: #243448;
+  background-color: $background;
   
   &{
     padding: 15px 0;
