--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -5,7 +5,7 @@ $transition_time: 0.4s ease;
 .nav__container__scrolled {
   transition: 0.4s ease;
   filter: drop-shadow(0 4px 5px #00000060);
-  background-color: #243448;
+  background-color: #ff9ef9;
   width: 100%;
   height: $navbar-height;
   padding: 20px;
@@ -13,7 +13,7 @@ $transition_time: 0.4s ease;
 }
 .nav__container {
   transition: 0.4s ease;
-  background-color: #243448;
+  background-color: #ff9ef9;
   width: 100%;
   height: $navbar-height;
   padding: 20px;
