--- a/src/pages/projects/index.scss
+++ b/src/pages/projects/index.scss
@@ -24,7 +24,7 @@ $image-size: 500px;
     grid-template-columns: $image-size auto;
     column-gap: 20px;
     overflow: hidden;
-    background-color: #39506b;
+    background-color: #FD45DA;
   }
 }
 
