--- a/src/styles/mobileStyles.scss
+++ b/src/styles/mobileStyles.scss
@@ -90,7 +90,7 @@
       align-items: center;
       justify-self: center;
       overflow: hidden;
-      background-color: #39506b;
+      background-color: #FD45DA;
       padding-bottom: 40px;
       width: 100%;
     }
