--- a/src/styles/mobileStyles.scss
+++ b/src/styles/mobileStyles.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     padding: 0;
   }
+  
   .menu {
     display: flex;
     left: 46%;
@@ -75,6 +76,13 @@
     font-size: 1.5rem;
     font-weight: 700;
   }
+  .badge {
+  position: absolute;
+  object-fit: fill;
+  height: $portrait-size/3;
+  margin-top: -13%;
+  overflow: hidden;
+}
 
   //Projects
   .project__item {
@@ -122,7 +130,6 @@
     width: $image-size / 1.2;
     overflow: hidden;
   }
-
   //Hero
   .home__container {
     padding-bottom: 50vh;
@@ -160,4 +167,12 @@
     color: $text-color;
     font-size: 1rem;
   }
+
+.badge {
+  position: absolute;
+  object-fit: fill;
+  height: $portrait-size/3.5;
+  margin-top: -25%;
+  overflow: hidden;
+}
 }
